[package]
name = "curds_cli_derive"
version = "0.1.0"
authors = ["whaycox <whaycox@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
curds_cli_definition = { path = "../curds_cli_definition" }
syn = { version = "1.0.70", features = ["extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"