[package]
name = "curds_cron"
version = "0.1.0"
authors = ["whaycox <whaycox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
regex = "1.4.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"

[dev-dependencies]
mockall = "0.9.1"