[package]
name = "curds_cron"
version = "0.2.0"
authors = ["whaycox <whaycox@gmail.com>"]
description = "A library for parsing and consuming CronExpressions."
repository = "https://github.com/whaycox/creamery-rs"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["parsing", "scheduling", "cron", "time"]

[dependencies]
chrono = "0.4.19"
regex = "1.4.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"

[dev-dependencies]
mockall = "0.9.1"
