[package]
name = "curds_cron"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }
curds_core = { path = "../curds_core" }